[gd_scene load_steps=4 format=3 uid="uid://bfv3h47osyg5s"]

[ext_resource type="Texture2D" uid="uid://c4p1mxd4e3621" path="res://Textures/enemyUFO.png" id="1_74gld"]
[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_tp1av"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kipeb"]
radius = 34.0588

[node name="Enemy" type="Area2D" groups=["damageable"]]
position = Vector2(1, 0)
script = ExtResource("1_tp1av")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_kipeb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("1_74gld")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.500002, 1.5)
scale = Vector2(4.65, 4.85)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
